tests/files/parser_tests/should_fail/066.cmdr
//Should not parse if-chain
else if (true) {
    echo "hello";
}